# open-lzt

./: .env.example  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.en.md  CONTRIBUTING.md  README.en.md  README.md  demo.sh  docker-compose.yml  install-flow.sh  install.sh  quickstart.sh  update.sh
.github-profile/: README.md
deploy/: autoupdate.sh  setup_tls.sh
deploy/autoupdate/: _README.txt  eventus.yaml  flow.yaml  mcp.yaml  testnet.yaml
deploy/nginx/: panel.conf
deploy/systemd/: open-lzt-autoupdate.service  open-lzt-autoupdate.timer  open-lzt-bot.service  open-lzt-eventus.service  open-lzt-flow-api.service  open-lzt-flow-worker.service  open-lzt-mcp.service  open-lzt-testnet.service
docs/: ARCHITECTURE.en.md  ARCHITECTURE.md  AUTOUPDATE.md  WHY.en.md  WHY.md  panel-architecture.md
docs/for_ai/: index.md
docs/lzt-gotchas/: README.md  auth.md  catalog.md  events.md  responses.md  timing.md
docs/org-profile/: README.en.md  README.md
lzt-flows/: CODEOWNERS  README.md  authors.yml  index.json
lzt-flows/.github/scripts/: check_author.py  check_code_owner.py  generate_index.py
lzt-flows/modules/notify-pack/: module.yaml  pyproject.toml
lzt-flows/modules/notify-pack/lzt_flow_notify_pack/: nodes.py
lzt-flows/modules/pricing-pack/: module.yaml  pyproject.toml
lzt-flows/modules/pricing-pack/lzt_flow_pricing_pack/: nodes.py
projects/lzt-ui/: README.md  check.py  lzt-icons.js  lzt-ui.css  lzt-ui.js
scripts/: bot-bootstrap.sh  healthcheck.sh  panel-dev.sh  reindex-flows.py  smoke.sh
tests/: test_autoupdate.sh
(+25 files in other folders)
