[project]
name = "lzt-flow-notify-pack"
version = "1.0.0"
description = "Discord and generic-webhook notification nodes for lzt-flow."
requires-python = ">=3.12"
dependencies = ["lzt-flow"]

# The entire install step. A node cannot appear in the engine's registry without a package that
# advertises it, so `pip install` IS the plugin system.
[project.entry-points."lzt_flow.nodes"]
notify = "lzt_flow_notify_pack.nodes:REGISTRATIONS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lzt_flow_notify_pack"]
