[project]
name = "lzt-flow-pricing-pack"
version = "1.0.0"
description = "Pricing helper nodes for lzt-flow."
requires-python = ">=3.12"
dependencies = ["lzt-flow"]

[project.entry-points."lzt_flow.nodes"]
pricing = "lzt_flow_pricing_pack.nodes:REGISTRATIONS"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lzt_flow_pricing_pack"]
